# signix

./: CMakeLists.txt
src/sgx/: CMakeLists.txt
